--- a/index.html
+++ b/index.html
@@ -1,115 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Your Name | Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Bootstrap CSS via CDN -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous"
-  >
+<head>
+    <meta charset="UTF-8">
+    <title>Your Name | Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS via CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
 
-  <!-- Page structure -->
-  <header>
-    <!-- Responsive Bootstrap navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="#hero">Alex Zhu</a>
+    <!-- Page structure -->
+    <header>
+        <!-- Responsive Bootstrap navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="#hero">Alex Zhu</a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
+                    aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-        <div class="collapse navbar-collapse" id="mainNavbar">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="#hero">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#skills">Skills</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
-            </li>
-          </ul>
+                <div class="collapse navbar-collapse" id="mainNavbar">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#hero">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#projects">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#skills">Skills</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <!-- Hero section -->
+        <section id="hero" class="py-5 bg-light">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-8">
+                        <h1 class="display-4 fw-bold mb-3">Alex Zhu</h1>
+
+                        <!-- Subtitle block -->
+                        <h2 class="h4 text-muted mb-3">
+                            Cybersecurity &amp; Software Enthusiast<br>
+                            Engineering Science @ University of Toronto
+                        </h2>
+
+                        <a href="#projects" class="btn btn-primary btn-lg">View projects</a>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- Projects section -->
+        <section id="projects" class="py-5">
+            <div class="container">
+                <h2 class="mb-4">Projects</h2>
+                <div id="projects-grid" class="row g-4">
+                    <!-- Project cards will go here -->
+                </div>
+            </div>
+        </section>
+
+        <!-- About section -->
+        <section id="about" class="py-5 bg-light">
+            <div class="container">
+                <h2 class="mb-4">About</h2>
+                <div class="row">
+                    <div class="col-lg-8">
+                        <p class="mb-3">
+                            I’m a cybersecurity-focused engineer with a strong foundation in software
+                            development and mathematics,
+                            especially interested in cryptography and secure architecture.
+                        </p>
+                        <p class="mb-0">
+                            I’m passionate about using my math background in exploring how ML/AI can be used to
+                            build safer and more
+                            resilient software.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
         </div>
-      </div>
-    </nav>
-  </header>
+        </section>
 
-  <main>
-    <!-- Hero section -->
-    <section id="hero" class="py-5 bg-light">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-8">
-            <h1 class="display-4 fw-bold mb-3">Alex Zhu</h1>
-            <p class="lead">Cybersecurity &amp; Software Enthusiast</p>
-            <p class="lead">Engineering Science @ University of Toronto</p>
-            <a href="#projects" class="btn btn-primary btn-lg">View projects</a>
-          </div>
+        <!-- Skills section -->
+        <section id="skills" class="py-5">
+            <div class="container">
+                <h2 class="mb-4">Skills</h2>
+                <!-- Skills content goes here -->
+            </div>
+        </section>
+
+        <!-- Contact section -->
+        <section id="contact" class="py-5 bg-light">
+            <div class="container">
+                <h2 class="mb-4">Contact</h2>
+                <!-- Contact content goes here -->
+            </div>
+        </section>
+    </main>
+
+    <footer class="py-3 bg-dark text-light">
+        <div class="container text-center">
+            <small>&copy; 2025 Your Name</small>
         </div>
-      </div>
-    </section>
+    </footer>
 
-    <!-- Projects section -->
-    <section id="projects" class="py-5">
-      <div class="container">
-        <h2 class="mb-4">Projects</h2>
-        <div id="projects-grid" class="row g-4">
-          <!-- Project cards will go here -->
-        </div>
-      </div>
-    </section>
-
-    <!-- About section -->
-    <section id="about" class="py-5 bg-light">
-      <div class="container">
-        <h2 class="mb-4">About</h2>
-        <!-- About content goes here -->
-      </div>
-    </section>
-
-    <!-- Skills section -->
-    <section id="skills" class="py-5">
-      <div class="container">
-        <h2 class="mb-4">Skills</h2>
-        <!-- Skills content goes here -->
-      </div>
-    </section>
-
-    <!-- Contact section -->
-    <section id="contact" class="py-5 bg-light">
-      <div class="container">
-        <h2 class="mb-4">Contact</h2>
-        <!-- Contact content goes here -->
-      </div>
-    </section>
-  </main>
-
-  <footer class="py-3 bg-dark text-light">
-    <div class="container text-center">
-      <small>&copy; 2025 Your Name</small>
-    </div>
-  </footer>
-
-  <!-- Bootstrap JS bundle via CDN -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"
-  ></script>
+    <!-- Bootstrap JS bundle via CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
