Created Contact Section

--- a/index.html
+++ b/index.html
@@ -114,14 +114,37 @@
         <section id="contact" class="py-5 bg-light">
             <div class="container">
                 <h2 class="mb-4">Contact</h2>
-                <!-- Contact content goes here -->
+                <h2 class="mb-3">Contact</h2>
+                <p class="lead mb-4">
+                    Feel free to reach out about collaboration, opportunities, or any questions about my work.
+                </p>
+
+                <ul class="list-unstyled mb-0">
+                    <li class="mb-2">
+                        <strong>Email:</strong>
+                        <a href="mailto:alexyifanzhu@gmail.com">alexyifanzhu@gmail.com</a>
+                    </li>
+                    <li class="mb-2">
+                        <strong>GitHub:</strong>
+                        <a href="https://github.com/Buddhathe18th" target="_blank" rel="noopener noreferrer">
+                            github.com/Buddhathe18th
+                        </a>
+                    </li>
+                    <li>
+                        <strong>LinkedIn:</strong>
+                        <a href="https://www.linkedin.com/in/alex-zhu-389058185/" target="_blank"
+                            rel="noopener noreferrer">
+                            linkedin.com/in/alex-zhu-389058185
+                        </a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
 
     <footer class="py-3 bg-dark text-light">
         <div class="container text-center">
-            <small>&copy; 2025 Your Name</small>
+            <small>&copy; 2025 Alex Zhu</small>
         </div>
     </footer>
 
