Update footer to display current year dynamically

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <footer class="py-3 bg-dark text-light">
         <div class="container text-center">
-            <small>&copy; 2025 Alex Zhu</small>
+            <small>&copy; <span id="year"></span> Alex Zhu</small>
         </div>
     </footer>
 
@@ -153,5 +153,6 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
+<script src="js/main.js"></script>
 
 </html>
