Refactor About section layout and add technology stack details

--- a/index.html
+++ b/index.html
@@ -84,23 +84,37 @@
             <div class="container">
                 <h2 class="mb-4">About</h2>
                 <div class="row">
-                    <div class="col-lg-8">
-                        <p class="mb-3">
-                            I’m a cybersecurity-focused engineer with a strong foundation in software
-                            development and mathematics,
-                            especially interested in cryptography and secure architecture.
-                        </p>
-                        <p class="mb-0">
-                            I’m passionate about using my math background in exploring how ML/AI can be used to
-                            build safer and more
-                            resilient software.
-                        </p>
+                    <div class="col-lg-7">
+                        <div class="col-lg-8">
+                            <p class="mb-3">
+                                I’m a cybersecurity-focused engineer with a strong foundation in software
+                                development and mathematics,
+                                especially interested in cryptography and secure architecture.
+                            </p>
+                            <p class="mb-0">
+                                I’m passionate about using my math background in exploring how ML/AI can be used to
+                                build safer and more
+                                resilient software.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <h3 class="h5 mb-3">Tech I use</h3>
+                        <ul class="list-unstyled mb-0">
+                            <li>HTML · CSS · JavaScript</li>
+                            <li>Python · Flask · Spotipy · yt-dlp</li>
+                            <li>Next.js</li>
+                            <li>OpenCV · NumPy · Tesseract OCR · Pillow · Pygame</li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </section>
-        </div>
-        </section>
+
+
+
+
+
 
         <!-- Skills section -->
         <section id="skills" class="py-5">
