Rearranged sections order

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                             <a class="nav-link" href="#hero">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#projects">Projects</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#skills">Skills</a>
+                            <a class="nav-link" href="#projects">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#awards">Awards</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
@@ -64,39 +64,26 @@
 
                         <a href="#projects" class="btn btn-primary btn-lg">View projects</a>
                     </div>
-
                 </div>
             </div>
         </section>
 
-        <!-- Projects section -->
-        <section id="projects" class="py-5">
-            <div class="container">
-                <h2 class="mb-4">Projects</h2>
-                <div id="projects-grid" class="row g-4">
-                    <!-- Project cards will go here -->
-                </div>
-            </div>
-        </section>
-
-        <!-- About section -->
+        <!-- About section (moved up) -->
         <section id="about" class="py-5 bg-light">
             <div class="container">
                 <h2 class="mb-4">About</h2>
                 <div class="row">
                     <div class="col-lg-7">
-                        <div class="col-lg-8">
-                            <p class="mb-3">
-                                I’m a cybersecurity-focused engineer with a strong foundation in software
-                                development and mathematics,
-                                especially interested in cryptography and secure architecture.
-                            </p>
-                            <p class="mb-0">
-                                I’m passionate about using my math background in exploring how ML/AI can be used to
-                                build safer and more
-                                resilient software.
-                            </p>
-                        </div>
+                        <p class="mb-3">
+                            I’m a cybersecurity-focused engineer with a strong foundation in software
+                            development and mathematics,
+                            especially interested in cryptography and secure architecture.
+                        </p>
+                        <p class="mb-0">
+                            I’m passionate about using my math background in exploring how ML/AI can be used to
+                            build safer and more
+                            resilient software.
+                        </p>
                     </div>
                     <div class="col-lg-5">
                         <h3 class="h5 mb-3">Tech I use</h3>
@@ -111,24 +98,28 @@
             </div>
         </section>
 
-
-
-
-
-
-        <!-- Skills section -->
-        <section id="skills" class="py-5">
+        <!-- Projects section (now after About) -->
+        <section id="projects" class="py-5">
             <div class="container">
-                <h2 class="mb-4">Skills</h2>
-                <!-- Skills content goes here -->
+                <h2 class="mb-4">Projects</h2>
+                <div id="projects-grid" class="row g-4">
+                    <!-- Project cards will go here -->
+                </div>
+            </div>
+        </section>
+
+        <!-- Awards section -->
+        <section id="awards" class="py-5 bg-light">
+            <div class="container">
+                <h2 class="mb-4">Awards</h2>
+                <!-- Awards content goes here -->
             </div>
         </section>
 
         <!-- Contact section -->
-        <section id="contact" class="py-5 bg-light">
+        <section id="contact" class="py-5">
             <div class="container">
                 <h2 class="mb-4">Contact</h2>
-                <h2 class="mb-3">Contact</h2>
                 <p class="lead mb-4">
                     Feel free to reach out about collaboration, opportunities, or any questions about my work.
                 </p>
@@ -155,6 +146,7 @@
             </div>
         </section>
     </main>
+
 
     <footer class="py-3 bg-dark text-light">
         <div class="container text-center">
