Update About section content to enhance personal narrative and interests

--- a/index.html
+++ b/index.html
@@ -75,14 +75,10 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <p class="mb-3">
-                            I’m a cybersecurity-focused engineer with a strong foundation in software
-                            development and mathematics,
-                            especially interested in cryptography and secure architecture.
-                        </p>
-                        <p class="mb-0">
-                            I’m passionate about using my math background in exploring how ML/AI can be used to
+                            I'm a cybersecurity-focused engineer with a strong foundation in software
+                            development and mathematics, especially interested in cryptography and secure architecture. I'm passionate about using my math background in exploring how ML/AI can be used to
                             build safer and more
-                            resilient software.
+                            resilient software. When I'm not at my computer, I like to play badminton and unwind with strategy games or puzzles
                         </p>
                     </div>
                     <div class="col-lg-5">
