Update project links in projects section with live demo and code repository URLs

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                                         environment setup, dependency management, and run scripts</li>
                                 </ul>
                                 <div class="mt-auto">
-                                    <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">Live demo</a>
-                                    <a href="#" class="btn btn-outline-secondary btn-sm" target="_blank">View code</a>
+                                    <a href="https://github.com/Buddhathe18th/SpotifyDown" class="btn btn-primary btn-sm me-2" target="_blank">Live demo</a>
+                                    <a href="https://github.com/Buddhathe18th/SpotifyDown" class="btn btn-outline-secondary btn-sm" target="_blank">View code</a>
                                 </div>
                             </div>
                         </article>
@@ -156,8 +156,8 @@
                                         solutions clearly</li>
                                 </ul>
                                 <div class="mt-auto">
-                                    <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">Live demo</a>
-                                    <a href="#" class="btn btn-outline-secondary btn-sm" target="_blank">View code</a>
+                                    <a href="https://github.com/Buddhathe18th/NonogramBlast" class="btn btn-primary btn-sm me-2" target="_blank">Live demo</a>
+                                    <a href="https://github.com/Buddhathe18th/NonogramBlast" class="btn btn-outline-secondary btn-sm" target="_blank">View code</a>
                                 </div>
                             </div>
                         </article>
@@ -185,8 +185,8 @@
                                         updating, and removing tasks</li>
                                 </ul>
                                 <div class="mt-auto">
-                                    <a href="#" class="btn btn-primary btn-sm me-2" target="_blank">Live demo</a>
-                                    <a href="#" class="btn btn-outline-secondary btn-sm" target="_blank">View code</a>
+                                    <a href="https://focusfy.vercel.app/" class="btn btn-primary btn-sm me-2" target="_blank">Live demo</a>
+                                    <a href="https://github.com/Buddhathe18th/Focusfy" class="btn btn-outline-secondary btn-sm" target="_blank">View code</a>
                                 </div>
                             </div>
                         </article>
