--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- Bootstrap CSS via CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Add this in your <head> if you haven't already -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
 </head>
 
 <body>
@@ -68,7 +71,7 @@
                 </div>
             </div>
         </section>
-<!-- About section (moved up) -->
+        <!-- About section (moved up) -->
         <section id="about" class="py-5 bg-light">
             <div class="container">
                 <h2 class="mb-4">About</h2>
@@ -76,9 +79,11 @@
                     <div class="col-lg-7">
                         <p class="mb-3">
                             I'm a cybersecurity-focused engineer with a strong foundation in software
-                            development and mathematics, especially interested in cryptography and secure architecture. I'm passionate about using my math background in exploring how ML/AI can be used to
+                            development and mathematics, especially interested in cryptography and secure architecture.
+                            I'm passionate about using my math background in exploring how ML/AI can be used to
                             build safer and more
-                            resilient software. When I'm not at my computer, I like to play badminton and unwind with strategy games or puzzles
+                            resilient software. When I'm not at my computer, I like to play badminton and unwind with
+                            strategy games or puzzles
                         </p>
                     </div>
                     <div class="col-lg-5">
@@ -157,8 +162,10 @@
                                         environment setup, dependency management, and run scripts</li>
                                 </ul>
                                 <div class="mt-auto">
-                                    <a href="https://github.com/Buddhathe18th/SpotifyDown" class="btn btn-primary btn-sm me-2" target="_blank">Live demo</a>
-                                    <a href="https://github.com/Buddhathe18th/SpotifyDown" class="btn btn-outline-secondary btn-sm" target="_blank">View code</a>
+                                    <a href="https://github.com/Buddhathe18th/SpotifyDown"
+                                        class="btn btn-primary btn-sm me-2" target="_blank">Live demo</a>
+                                    <a href="https://github.com/Buddhathe18th/SpotifyDown"
+                                        class="btn btn-outline-secondary btn-sm" target="_blank">View code</a>
                                 </div>
                             </div>
                         </article>
@@ -186,8 +193,10 @@
                                         solutions clearly</li>
                                 </ul>
                                 <div class="mt-auto">
-                                    <a href="https://github.com/Buddhathe18th/NonogramBlast" class="btn btn-primary btn-sm me-2" target="_blank">Live demo</a>
-                                    <a href="https://github.com/Buddhathe18th/NonogramBlast" class="btn btn-outline-secondary btn-sm" target="_blank">View code</a>
+                                    <a href="https://github.com/Buddhathe18th/NonogramBlast"
+                                        class="btn btn-primary btn-sm me-2" target="_blank">Live demo</a>
+                                    <a href="https://github.com/Buddhathe18th/NonogramBlast"
+                                        class="btn btn-outline-secondary btn-sm" target="_blank">View code</a>
                                 </div>
                             </div>
                         </article>
@@ -215,8 +224,10 @@
                                         updating, and removing tasks</li>
                                 </ul>
                                 <div class="mt-auto">
-                                    <a href="https://focusfy.vercel.app/" class="btn btn-primary btn-sm me-2" target="_blank">Live demo</a>
-                                    <a href="https://github.com/Buddhathe18th/Focusfy" class="btn btn-outline-secondary btn-sm" target="_blank">View code</a>
+                                    <a href="https://focusfy.vercel.app/" class="btn btn-primary btn-sm me-2"
+                                        target="_blank">Live demo</a>
+                                    <a href="https://github.com/Buddhathe18th/Focusfy"
+                                        class="btn btn-outline-secondary btn-sm" target="_blank">View code</a>
                                 </div>
                             </div>
                         </article>
@@ -238,31 +249,36 @@
         <section id="contact" class="py-5">
             <div class="container">
                 <h2 class="mb-4">Contact</h2>
-                <p class="lead mb-4">
-                    Feel free to reach out about collaboration, opportunities, or any questions about my work.
+                <p class="mb-4">
+                    Open to software and cybersecurity opportunities, collaborations, and questions about my work.
                 </p>
 
-                <ul class="list-unstyled mb-0">
-                    <li class="mb-2">
-                        <strong>Email:</strong>
-                        <a href="mailto:alexyifanzhu@gmail.com">alexyifanzhu@gmail.com</a>
-                    </li>
-                    <li class="mb-2">
-                        <strong>GitHub:</strong>
-                        <a href="https://github.com/Buddhathe18th" target="_blank" rel="noopener noreferrer">
-                            github.com/Buddhathe18th
-                        </a>
-                    </li>
-                    <li>
-                        <strong>LinkedIn:</strong>
-                        <a href="https://www.linkedin.com/in/alex-zhu-389058185/" target="_blank"
-                            rel="noopener noreferrer">
-                            linkedin.com/in/alex-zhu-389058185
-                        </a>
-                    </li>
-                </ul>
+                <!-- Icon row -->
+                <div class="d-flex flex-wrap gap-4 align-items-center">
+
+                    <a href="mailto:alexyifanzhu@gmail.com"
+                        class="text-decoration-none text-body d-flex align-items-center">
+                        <i class="bi bi-envelope-fill me-2 fs-3"></i>
+                        <span>Email</span>
+                    </a>
+
+                    <a href="https://github.com/Buddhathe18th" target="_blank" rel="noopener noreferrer"
+                        class="text-decoration-none text-body d-flex align-items-center">
+                        <i class="bi bi-github me-2 fs-3"></i>
+                        <span>GitHub</span>
+                    </a>
+
+                    <a href="https://www.linkedin.com/in/alex-zhu-389058185/" target="_blank" rel="noopener noreferrer"
+                        class="text-decoration-none text-body d-flex align-items-center">
+                        <i class="bi bi-linkedin me-2 fs-3"></i>
+                        <span>LinkedIn</span>
+                    </a>
+
+                </div>
             </div>
         </section>
+
+
     </main>
 
 
