--- a/index.html
+++ b/index.html
@@ -87,14 +87,94 @@
                         </p>
                     </div>
                     <div class="col-lg-5">
-                        <h3 class="h5 mb-3">Tech I use</h3>
-                        <ul class="list-unstyled mb-0">
-                            <li>HTML · CSS · JavaScript</li>
-                            <li>Python · Flask · Spotipy · yt-dlp</li>
-                            <li>Next.js</li>
-                            <li>OpenCV · NumPy · Tesseract OCR · Pillow · Pygame</li>
-                        </ul>
+                        <h3 class="h5 mb-3">Skills</h3>
+
+                        <div class="row row-cols-3 g-3">
+
+                            <!-- Python -->
+                            <div class="col">
+                                <div class="d-flex flex-column align-items-center">
+                                    <img src="assets/logos/python.svg" alt="Python" class="mb-1"
+                                        style="width:40px; height:auto;">
+                                    <span class="small text-muted">Python</span>
+                                </div>
+                            </div>
+
+                            <!-- HTML -->
+                            <div class="col">
+                                <div class="d-flex flex-column align-items-center">
+                                    <img src="assets/logos/html.svg" alt="HTML" class="mb-1"
+                                        style="width:40px; height:auto;">
+                                    <span class="small text-muted">HTML</span>
+                                </div>
+                            </div>
+
+                            <!-- CSS -->
+                            <div class="col">
+                                <div class="d-flex flex-column align-items-center">
+                                    <img src="assets/logos/css.svg" alt="CSS" class="mb-1"
+                                        style="width:40px; height:auto;">
+                                    <span class="small text-muted">CSS</span>
+                                </div>
+                            </div>
+
+                            <!-- JavaScript -->
+                            <div class="col">
+                                <div class="d-flex flex-column align-items-center">
+                                    <img src="assets/logos/javascript.svg" alt="JavaScript" class="mb-1"
+                                        style="width:40px; height:auto;">
+                                    <span class="small text-muted">JavaScript</span>
+                                </div>
+                            </div>
+
+                            <!-- Next.js -->
+                            <div class="col">
+                                <div class="d-flex flex-column align-items-center">
+                                    <img src="assets/logos/nextjs.svg" alt="Next.js" class="mb-1"
+                                        style="width:40px; height:auto;">
+                                    <span class="small text-muted">Next.js</span>
+                                </div>
+                            </div>
+
+                            <!-- Flask -->
+                            <div class="col">
+                                <div class="d-flex flex-column align-items-center">
+                                    <img src="assets/logos/flask.svg" alt="Flask" class="mb-1"
+                                        style="width:40px; height:auto;">
+                                    <span class="small text-muted">Flask</span>
+                                </div>
+                            </div>
+
+                            <!-- OpenCV -->
+                            <div class="col">
+                                <div class="d-flex flex-column align-items-center">
+                                    <img src="assets/logos/opencv.svg" alt="OpenCV" class="mb-1"
+                                        style="width:40px; height:auto;">
+                                    <span class="small text-muted">OpenCV</span>
+                                </div>
+                            </div>
+
+                            <!-- Bootstrap -->
+                            <div class="col">
+                                <div class="d-flex flex-column align-items-center">
+                                    <img src="assets/logos/bootstrap.svg" alt="Bootstrap" class="mb-1"
+                                        style="width:40px; height:auto;">
+                                    <span class="small text-muted">Bootstrap</span>
+                                </div>
+                            </div>
+
+                            <!-- Tailwind -->
+                            <div class="col">
+                                <div class="d-flex flex-column align-items-center">
+                                    <img src="assets/logos/tailwind.svg" alt="Tailwind CSS" class="mb-1"
+                                        style="width:40px; height:auto;">
+                                    <span class="small text-muted">Tailwind CSS</span>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
+
                 </div>
             </div>
         </section>
