--- a/index.html
+++ b/index.html
@@ -321,9 +321,29 @@
         <section id="awards" class="py-5 bg-light">
             <div class="container">
                 <h2 class="mb-4">Awards</h2>
-                <!-- Awards content goes here -->
+
+                <ul class="list-unstyled">
+                    <li class="mb-2">
+                        <strong>CyberTitan VIII National Champion</strong> - 1st in Canada (2025); CyberTitan finalist
+                        (2024)
+                    </li>
+                    <li class="mb-2">
+                        <strong>CyberPatriot XVII National Finals</strong> - 6th globally, 2nd in Cisco Challenge (2025)
+                    </li>
+                    <li class="mb-2">
+                        <strong>Canadian Math Olympiad</strong> - Top 15 in Canada; Top 90/5,000 in 2024 COMC (2025)
+                    </li>
+                    <li class="mb-2">
+                        <strong>CyberSci Regionals</strong> - 3rd in Toronto (2025)
+                    </li>
+                    <li class="mb-2">
+                        <strong>President, Cybersecurity Club</strong> - Led 50+ members; organized workshops and an
+                        annual CTF competition
+                    </li>
+                </ul>
             </div>
         </section>
+
 
         <!-- Contact section -->
         <section id="contact" class="py-5">
