--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <!-- Project 1 -->
                     <div class="col-md-6">
                         <article class="card h-100">
-                            <img src="assets/projects/image.png" class="card-img-top"
+                            <img src="assets/projects/fourierTransforms.png" class="card-img-top"
                                 alt="Fourier Transform Visualizer">
                             <div class="card-body d-flex flex-column">
                                 <h3 class="h5 card-title mb-1">Fourier Transform - Interactive Visualization</h3>
@@ -224,7 +224,7 @@
                     <!-- Project 2 -->
                     <div class="col-md-6">
                         <article class="card h-100">
-                            <img src="assets/projects/image.png" class="card-img-top" alt="Offline Music Tool">
+                            <img src="assets/projects/spotifyDown.png" class="card-img-top" alt="Offline Music Tool">
                             <div class="card-body d-flex flex-column">
                                 <h3 class="h5 card-title mb-1">SpotifyDown - Offline Music Tool</h3>
                                 <p class="text-muted small mb-2">Python (Flask, Spotipy, yt-dlp)</p>
@@ -254,7 +254,7 @@
                     <!-- Project 3 -->
                     <div class="col-md-6">
                         <article class="card h-100">
-                            <img src="assets/projects/image.png" class="card-img-top" alt="Logic Puzzle Solver">
+                            <img src="assets/projects/nonogramBlast.png" class="card-img-top" alt="Logic Puzzle Solver">
                             <div class="card-body d-flex flex-column">
                                 <h3 class="h5 card-title mb-1">Nonogram Blast - Logic Puzzle Solver</h3>
                                 <p class="text-muted small mb-2">Python (OpenCV, Tesseract OCR, Pillow, Pygame)</p>
@@ -285,7 +285,7 @@
                     <!-- Project 4 -->
                     <div class="col-md-6">
                         <article class="card h-100">
-                            <img src="assets/projects/image.png" class="card-img-top" alt="Productivity Web App">
+                            <img src="assets/projects/focusfy.png" class="card-img-top" alt="Productivity Web App">
                             <div class="card-body d-flex flex-column">
                                 <h3 class="h5 card-title mb-1">Focusfy - Productivity Web App</h3>
                                 <p class="text-muted small mb-2">HTML, CSS, JavaScript</p>
