--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" data-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -46,6 +45,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
+                        <button id="theme-toggle" class="btn btn-outline-light btn-sm ms-3" type="button">
+                            <i class="bi bi-moon" id="theme-icon"></i>
+                        </button>
                     </ul>
                 </div>
             </div>
