Fixed alignment for Bootstrap icons

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                             <!-- Cryptography -->
                             <div class="col">
                                 <div class="d-flex flex-column align-items-center">
-                                    <i class="bi bi-key-fill mb-1" style="font-size: 2rem;"></i>
+                                    <span class="skill-icon-container"><i class="bi bi-key-fill mb-1"
+                                            style="font-size: 2rem;"></i></span>
                                     <span class="small text-muted">Cryptography</span>
                                 </div>
                             </div>
@@ -117,7 +118,8 @@
                             <!-- Digital forensics -->
                             <div class="col">
                                 <div class="d-flex flex-column align-items-center">
-                                    <i class="bi bi-fingerprint mb-1" style="font-size: 2rem;"></i>
+                                    <span class="skill-icon-container"><i class="bi bi-fingerprint mb-1"
+                                            style="font-size: 2rem;"></i></span>
                                     <span class="small text-muted">Digital forensics</span>
                                 </div>
                             </div>
@@ -190,7 +192,8 @@
                             <!-- Linux -->
                             <div class="col">
                                 <div class="d-flex flex-column align-items-center">
-                                    <i class="bi bi-terminal-fill mb-1" style="font-size: 2rem;"></i>
+                                    <span class="skill-icon-container"><i class="bi bi-terminal-fill mb-1"
+                                            style="font-size: 2rem;"></i></span>
                                     <span class="small text-muted">Linux security</span>
 
                                 </div>
@@ -212,7 +215,8 @@
                             <!-- Network defense -->
                             <div class="col">
                                 <div class="d-flex flex-column align-items-center">
-                                    <i class="bi bi-shield-lock-fill mb-1" style="font-size: 2rem;"></i>
+                                    <span class="skill-icon-container"><i class="bi bi-shield-lock-fill mb-1"
+                                            style="font-size: 2rem;"></i></span>
                                     <span class="small text-muted">Network defense</span>
                                 </div>
                             </div>
