Moved awards up above projects, aligned about and skills section

--- a/index.html
+++ b/index.html
@@ -32,16 +32,13 @@
                 <div class="collapse navbar-collapse" id="mainNavbar">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#hero">Home</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#projects">Projects</a>
+                            <a class="nav-link" href="#awards">Awards</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#awards">Awards</a>
+                            <a class="nav-link" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
@@ -78,9 +75,9 @@
         <!-- About section (moved up) -->
         <section id="about" class="py-5">
             <div class="container">
-                <h2 class="mb-4">About</h2>
                 <div class="row">
                     <div class="col-lg-7">
+                        <h2 class="mb-4">About</h2>
                         <p class="mb-3">
                             I'm a cybersecurity-focused engineer with a strong foundation in software
                             development and mathematics, especially interested in cryptography and secure architecture.
@@ -91,7 +88,7 @@
                         </p>
                     </div>
                     <div class="col-lg-5">
-                        <h3 class="h5 mb-3">Skills</h3>
+                        <h2 class="mb-4">Skills</h2>
                         <div class="row row-cols-3 g-3">
                             <!-- Python -->
                             <div class="col">
@@ -236,6 +233,35 @@
                         </div>
                     </div>
         </section>
+
+        <!-- Awards section -->
+        <section id="awards" class="py-5">
+            <div class="container">
+                <h2 class="mb-4">Awards</h2>
+
+                <ul class="list-unstyled">
+                    <li class="mb-2">
+                        <strong>CyberTitan VIII National Champion</strong> - 1st in Canada (2025); CyberTitan finalist
+                        (2024)
+                    </li>
+                    <li class="mb-2">
+                        <strong>CyberPatriot XVII National Finals</strong> - 6th globally, 2nd in Cisco Challenge (2025)
+                    </li>
+                    <li class="mb-2">
+                        <strong>Canadian Math Olympiad</strong> - Top 15 in Canada; Top 90/5,000 in 2024 COMC (2025)
+                    </li>
+                    <li class="mb-2">
+                        <strong>CyberSci Regionals</strong> - 3rd in Toronto (2025)
+                    </li>
+                    <li class="mb-2">
+                        <strong>President, Cybersecurity Club</strong> - Led 50+ members; organized workshops and an
+                        annual CTF competition
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+
         <!-- Projects section -->
         <section id="projects" class="py-5">
             <div class="container">
@@ -375,34 +401,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- Awards section -->
-        <section id="awards" class="py-5">
-            <div class="container">
-                <h2 class="mb-4">Awards</h2>
-
-                <ul class="list-unstyled">
-                    <li class="mb-2">
-                        <strong>CyberTitan VIII National Champion</strong> - 1st in Canada (2025); CyberTitan finalist
-                        (2024)
-                    </li>
-                    <li class="mb-2">
-                        <strong>CyberPatriot XVII National Finals</strong> - 6th globally, 2nd in Cisco Challenge (2025)
-                    </li>
-                    <li class="mb-2">
-                        <strong>Canadian Math Olympiad</strong> - Top 15 in Canada; Top 90/5,000 in 2024 COMC (2025)
-                    </li>
-                    <li class="mb-2">
-                        <strong>CyberSci Regionals</strong> - 3rd in Toronto (2025)
-                    </li>
-                    <li class="mb-2">
-                        <strong>President, Cybersecurity Club</strong> - Led 50+ members; organized workshops and an
-                        annual CTF competition
-                    </li>
-                </ul>
-            </div>
-        </section>
-
 
         <!-- Contact section -->
         <section id="contact" class="py-5">
